--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,75 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.grid {
+  display: flex; 
+  flex-direction: row;
+  flex-wrap: wrap; 
+  justify-content: space-between;
+  margin-left: 20%;
+  margin-right: 20%;
+  background-color: #00396b;
+  padding: 5px;
+  border-radius: 15px;
+}
+
+.grid-square {
+  width: 9%;
+  border-radius: 5px; 
+  padding-bottom: 7.5%; /* 1:1 Aspect Ratio */
+  text-align: center; 
+  display: flex;
+  justify-content: center;
+  height: 0; 
+  position: relative; 
+  margin: 2px;
+  /* margin-top: 3px; 
+  margin-bottom: 3px; */
+  /* border: 1px solid white; */
+  
+}
+
+#level-0 {
+  background-color: #f62d2d;
+}
+
+#level-1 {
+  background-color: #F6412D;
+}
+
+#level-2 {
+  background-color: #ff6207;
+}
+
+#level-3 {
+  background-color: #FF5607;
+}
+
+#level-4 {
+  background-color: #ff7707;
+}
+
+#level-5 {
+  background-color: #FF9800;
+}
+
+#level-6 {
+  background-color: #ffa600;
+}
+
+#level-7 {
+  background-color: #FFC100;
+}
+
+#level-8 {
+  background-color: #ffee00;
+}
+
+#level-9 {
+  background-color: #f0ff19;
+}
+
+#level-10 {
+  background-color: #d5ff19;
+}
