Added Start Stop to Quiz

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
+  font-family: 'Josefin Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 code {
@@ -19,7 +23,7 @@ code {
   justify-content: space-between;
   margin-left: 5%;
   margin-right: 5%;
-  background-color: #00396b;
+  background-color: #1680a3;
   padding: 5px;
   border-radius: 15px;
   max-width: 700px;
@@ -42,7 +46,7 @@ code {
 }
 
 .grid-square {
-  width: 9%;
+  width: 8.6%;
   border-radius: 5px; 
   padding-bottom: 7.5%; /* 1:1 Aspect Ratio */
   text-align: center; 
@@ -52,6 +56,7 @@ code {
   position: relative; 
   margin: 2px;
   flex-wrap: wrap;
+  border: 1px solid;
   
   /* margin-top: 3px; 
   margin-bottom: 3px; */
@@ -103,7 +108,7 @@ code {
   color:#00686b;
   font-weight: bolder;
   background-color: white;
-
+  padding: 8px;
   border-radius: 5px;
 }
 
@@ -121,12 +126,18 @@ code {
 
 .support-not-needed{
   margin: 5px; 
-  background-color: lightgreen
+  background-color: #A0D568;
+  padding: 5px;
+  border: 2px solid;
+  border-radius: 5px
 }
 
 .support-needed{
   margin: 5px; 
-  background-color: lightcoral
+  background-color: #ED5564;
+  padding: 5px;
+  border: 2px solid;
+  border-radius: 5px
 }
 
 .nav-bar {
@@ -134,17 +145,24 @@ code {
   align-items: center;
   justify-content: center;
   font-weight: bold;
-  padding: "12px";
-  margin: 0 12px 12px;
-  background: #D95276;
+  font-size: smaller;
+  font-size: 11px;
+  margin: 5 12px 12px;
+  background: #FFCE54;
   text-decoration: none;
-  color: #022873;
+  color: black;
   border-radius: 5px;
-  height: 55px;
-  width: 95px;
+  height: 30px;
+  width: 65px;
+  margin-left: 2px;
+  margin-right: 2px;
   text-align: center;
   margin-bottom: 0px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
+.student-dash-header {
+  border: 2px solid;
 }
 
 #level-0 {
@@ -189,16 +207,23 @@ code {
 }
 
 #level-10 {
-  background-image: linear-gradient(to bottom right, white, rgb(255, 253, 160),#fbff19, rgb(255, 253, 160),white);
+  background-image: linear-gradient(to bottom right, white, rgb(255, 253, 160),#f9fc42, rgb(255, 253, 160),white);
 }
 
-
+form {
+  font-weight: bolder;
+}
 
 button {
-  width: 130px;
+  width: 150px;
   height: 25px;
   margin: 3px;
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: bolder;
+  font-size: large;
 }
+
+
 
 .mastery-color {
   width: 9.1%;
@@ -246,7 +271,7 @@ button {
 }
 
 #color-10 {
-  background-image: linear-gradient(to bottom right, white, rgb(255, 253, 160),#fbff19, rgb(255, 253, 160),white);
+  background-image: linear-gradient(to bottom right, white, rgb(255, 253, 160),#f9fc42, rgb(255, 253, 160),white);
 }
 
 .student-dash-fact {
@@ -258,4 +283,39 @@ button {
   padding-right: 3px;
   margin-top: 5px;
   margin-bottom: 5px;
+  width: 48px;
+  text-align: center;
+  font-weight: bold;
 }
+
+.color-palette {
+  color: #AC92EB;
+  color: #4FC1E8;
+  color: #A0D568;
+  color: #FFCE54;
+  color: #ED5564;
+}
+
+button {
+  display: inline-block;
+  cursor: pointer;
+  box-shadow: inset 0 0 0 0 #AC92EB;
+  -webkit-transition: ease-out 0.4s;
+  -moz-transition: ease-out 0.4s;
+  transition: ease-out 0.4s;
+}
+
+
+
+button:hover {
+  box-shadow: inset 0 0 0 50px #AC92EB;
+}
+
+
+
+#outer {
+  width: 364px;
+  margin: 50px auto 0 auto;
+  text-align: center;
+}
+
