--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,8 @@ body {
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif; */
-  font-family: 'Josefin Sans', sans-serif;
+  /* font-family: 'Josefin Sans', sans-serif; */
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
@@ -231,7 +232,8 @@ button {
   width: 150px;
   height: 25px;
   margin: 3px;
-  font-family: 'Josefin Sans', sans-serif;
+  /* font-family: 'Josefin Sans', sans-serif; */
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: bolder;
   font-size: large;
 }
@@ -335,5 +337,11 @@ button:hover {
   width: 364px;
   margin: 50px auto 0 auto;
   text-align: center;
+}
+
+.fonts-to-use {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+  font-family: Roboto;
 }
 
