--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 
 body {
   margin: 0;
@@ -6,15 +7,18 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif; */
   /* font-family: 'Josefin Sans', sans-serif; */
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
+  /* font-family: Arial, Helvetica, sans-serif;*/
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  /* font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace; */
+    font-family: 'Roboto', sans-serif;
 }
 
 .grid {
@@ -162,8 +166,9 @@ code {
   font-size: smaller;
   font-size: 11px;
   margin: 5 12px 12px;
-  background: #FFCE54;
+  background: #A0D568;
   text-decoration: none;
+  font-family: 'Roboto', sans-serif;
   color: black;
   border-radius: 5px;
   height: 30px;
@@ -233,7 +238,7 @@ button {
   height: 25px;
   margin: 3px;
   /* font-family: 'Josefin Sans', sans-serif; */
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
   font-weight: bolder;
   font-size: large;
 }
@@ -318,6 +323,8 @@ button {
 
 button {
   display: inline-block;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bolder;
   cursor: pointer;
   box-shadow: inset 0 0 0 0 #AC92EB;
   -webkit-transition: ease-out 0.4s;
@@ -343,5 +350,7 @@ button:hover {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-family: Arial, Helvetica, sans-serif;
   font-family: Roboto;
+  font-family: Open sans;
+
 }
 
