--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,7 +28,9 @@ code {
   justify-content: space-between;
   margin-left: 5%;
   margin-right: 5%;
-  background-color: #4FC1E8;
+  /* background-color: #4FC1E8; */
+  background-color: black;
+
   padding: 5px;
   border-radius: 15px;
   max-width: 700px;
@@ -319,7 +321,7 @@ button {
   height: 95px;
   width: 160px;
   border-radius: 45%;
-  box-shadow: inset 5px 5px rgba(0,0,0,.15);
+  box-shadow: inset 2px 2px rgba(0,0,0,.15);
 }
 
 .student-dash-fact {
@@ -355,6 +357,7 @@ button {
   transition: ease-out 0.4s;
   background-color: #4FC1E8;
   border-radius: 5px;
+  box-shadow: inset 2px 2px rgba(0,0,0,.15);
 }
 
 input {
