added components for matteo

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -412,3 +412,30 @@ button:hover {
 
 }
 
+#matteo-1{
+  background-color: #AD2823;
+}
+
+#matteo-2{
+  background-color: #F26721;
+}
+
+#matteo-3{
+  background-color: #FEE000;
+}
+
+#matteo-4{
+  background-color: #4FB748;
+}
+
+#matteo-5{
+  background-color: #07446B;
+}
+
+#matteo-6{
+  background-color: #4B2164;
+}
+
+#matteo-7{
+  background-color: #6C52A2;
+}
