--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+
 
 body {
   margin: 0;
@@ -318,10 +320,24 @@ button {
   text-align: center;
   align-content: center;
   text-decoration: underline;
-  height: 95px;
-  width: 160px;
-  border-radius: 45%;
-  box-shadow: inset 2px 2px rgba(0,0,0,.15);
+  padding: 8px;
+  margin: 25px;
+  height: 75px;
+  width: 165px;
+  background-color: rgba(255, 255, 255, 0.74);
+  /* border-radius: 45%; */
+  /* box-shadow: inset 2px 2px rgba(0,0,0,.15); */
+  background-repeat: no-repeat;
+  background-position: center;
+  /* opacity: 0.9; */
+  font-weight: 700;
+}
+
+.button-holder {
+  background-position: center;
+  background-repeat: no-repeat;
+  /* width: 100%; */
+  height: 100%;
 }
 
 .student-dash-fact {
@@ -333,7 +349,7 @@ button {
   padding-right: 3px;
   margin-top: 5px;
   margin-bottom: 5px;
-  width: 48px;
+  width: 53px;
   text-align: center;
   font-weight: bold;
 }
@@ -355,9 +371,10 @@ button {
   -webkit-transition: ease-out 0.4s;
   -moz-transition: ease-out 0.4s;
   transition: ease-out 0.4s;
-  background-color: #4FC1E8;
+  background-color: #4FC1E888;
   border-radius: 5px;
   box-shadow: inset 2px 2px rgba(0,0,0,.15);
+  font-size: 15px;
 }
 
 input {
@@ -387,21 +404,85 @@ button:hover {
   text-align: center;
 }
 
+.home-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 15px;
+   
+  /* text-align: center; */
+}
+
 .home-one {
   text-align: center;
   text-decoration: underline;
+  background-image: linear-gradient(to bottom right,#AC92EB88,#4FC1E888);
+  border-radius: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  width: fit-content;
+  font-size: 32px;
+  margin-bottom: 0px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .home-two {
   text-align: center;
+  background-image: linear-gradient(to bottom right, #4FC1E888, #A0d56888);
+  border-radius: 20px;
+  margin-left: 35px;
+  margin-right: 35px;
+  width: fit-content;
+  font-size: 29px;
+  margin-bottom: 0px;
+  font-style: italic;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .home-three {
   text-align: center;
+  background-image: linear-gradient(to bottom right, #A0d56888, #FFCE5488);
+  border-radius: 20px;
+  margin-left: 50px;
+  margin-right: 50px;
+  width: fit-content;
+  font-size: 26px;
+  margin-bottom: 0px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .home-four {
   text-align: center;
+  background-image: linear-gradient(to bottom right, #FFCE5488, #ED556488);
+  border-radius: 20px;
+  margin-left: 65px;
+  margin-right: 65px;
+  width: fit-content;
+  font-size: 23px;
+  margin-bottom: 0px;
+  font-style: italic;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+
+
+.error {
+  color: red;
+  margin-left: 20px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.student-on-teacher-dash {
+  margin: 10px;
+  width: 200px;
+  padding: 5px;
+  border-radius: 5px;
+  background-color: #ad92eb34;
 }
 
 .fonts-to-use {
