minor css added dashboard

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -108,6 +108,27 @@ button:hover {
   color: #ED5564;
 }
 
+.dashboard-fact {
+  transition: all 900ms;
+  cursor: default;
+}
+
+.dashboard-fact > h3 {
+  transition: transform 500ms
+}
+
+.dashboard-fact > h3:hover {
+  transform: scale(1.3)
+}
+
+.dashboard-fact:hover {
+  /* position: relative; */
+  /* top:50px; */
+  box-shadow: inset 0 0 0 50px #AC92EB;
+  /* border:  3px solid black; */
+  /* transform: scale(1.3); */
+}
+
 .dash-info {
   margin: 5px;
 }
